--- a/system/res/css/nodeman.css
+++ b/system/res/css/nodeman.css
@@ -46,6 +46,7 @@ div.white-container {
     background-color: rgba(247,247,247,0.7);
     border-radius: 5px;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 div.raised {
