--- a/system/res/css/nodeman.css
+++ b/system/res/css/nodeman.css
@@ -70,12 +70,13 @@ div.update-block {
    margin-bottom: 15px; 
 }
 div.update-type {
-    margin-bottom: 5px;
     font-weight: strong;
 } 
 div.update-item {
     font-weight: normal;
     font-size: 14px;
+    width: 100%;
+    margin-top: 5px;
     
 }
 
