--- a/system/res/css/nodeman.css
+++ b/system/res/css/nodeman.css
@@ -14,6 +14,7 @@ body {
     margin: 10px;
 }
 
+
 div[class ^= "pure-u-"] {
     float: left;
 }
@@ -33,6 +34,11 @@ section[class ^= "pure-u-"] {
     overflow: auto;
 }
 
+.pure-button.risky {
+	background-color: #7F1717;
+	color: white;
+	font-weight: bold;
+}
 
 main h1 {
     margin-top: 5px;
@@ -61,6 +67,7 @@ div.raised {
 box-shadow: 0 0 10px #9c9c9c;
 }
 
+
 div.white-container h3 {
     margin-top: 0px;
     width: 100%;
@@ -83,3 +90,141 @@ div.update-item {
 #updater {
     display: none;
 }
+
+nav {
+	width: 150px;
+	height: 100%;
+	position: fixed;
+	left: 0;
+	background-color: #2F172E;
+	background-color: #4F274E;
+	color: white;
+	text-align: center;
+}
+
+nav .pure-menu-heading {
+	color: white;
+	text-transform: none;
+	font-weight: bold;
+}
+
+nav .pure-menu-item {
+	background-color: #4F274E;
+}
+
+nav .pure-menu-item :hover
+{
+	background-color: #6F376E;
+}
+
+nav .pure-menu-item :focus {
+	background-color: #6F376E;
+}
+
+nav .pure-menu-link {
+	color: white;
+}
+nav img.logo {
+	position: absolute;
+	bottom: 20px;
+	width: 75px;
+	left: 35px;
+}
+
+div.ui-uri {
+	font-size: small;
+	float: left;
+	margin-left: 20px;
+	margin-top: 5px;
+	font-weight: bold;
+}
+
+div.ui-version {
+	font-size: small;
+	float: right;
+	margin-right: 20px;
+	margin-top: 5px;
+	font-weight: bold;
+}
+
+li.menu-divide-top {
+	border-top: 1px solid #8F598E;
+}
+
+li.menu-divide-bottom {
+	border-bottom: 1px solid #8F598E;
+}
+
+li.menu-item-sub {
+	background-color: #3F1F3E;
+}
+
+li.menu-item-sub :hover {
+	background-color: #4F314F;
+}
+
+li.services-sub {
+	display: none;
+}
+
+li.keyring-sub {
+	display: none;
+}
+
+.content {
+	padding-left: 150px;
+	box-sizing: padding-box;
+	
+}
+
+textarea.key-display {
+	resize: none;
+	background-color: #EFEFEF;
+	background-color: white;
+	font-family: monospace;
+	font-size: 1.1em;
+	border: 1px solid #C0C0C0;
+	padding: 5px;
+	
+}
+
+textarea.key-display.right {
+	float: right;
+}
+
+div.right {
+	float:right;
+}
+
+div.clear {
+	clear:both;
+}
+
+.key-info {
+	display: none;
+}
+
+.key-id-tag {
+	font-family: monospace;
+	float: right;
+	clear: both;
+	margin-top: 10px;
+}
+
+table.key-listing-table {
+	background-color: #EFEFEF;
+	
+}
+
+table.key-listing-table td a {
+	font-weight: bold;
+	text-decoration: none;
+	overflow: auto;
+	
+}
+
+
+table.key-listing-table tr.key-info {
+	background-color: white;
+}
+
